tests/typechecker/should_pass/divergent_extendable.csp
F(x, y, z) = let a = {|x|} within (x.y, x.z)

G(c) = F(c, 1, 1)
